--- a/package.xml
+++ b/package.xml
@@ -12,11 +12,12 @@
   <depend>std_msgs</depend>
   <depend>tf</depend>
   <depend>tm_driver</depend>
-  <depend>tm_kinematics</depend>
   <depend>tm_msgs</depend>
   <depend>pluginlib</depend>
   <depend>eigen</depend>
   <depend>cmake_modules</depend>
   <depend>sensor_msgs</depend>
+  <depend>moveit_core</depend>
+  <depend>moveit_ros_planning_interface</depend>
 
 </package>
